// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div>
  <div
    className="pa-2 border-b-4"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        className="border-solid border-2 border-gray-300 pa-2"
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        className="ml-2 pa-1 rounded font-semibold text-gray-700"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="pa-2 font-semibold"
  >
    <div>
      <span
        className="pa-1"
      >
        <button
          className="pa-1 rounded font-semibold text-gray-700"
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
      </span>
      <span
        className="pa-1"
      >
        <button
          className="pa-1 rounded font-semibold text-gray-700"
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
      </span>
      <span
        className="pa-1"
      >
        <button
          className="pa-1 rounded font-semibold text-gray-700"
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
      </span>
      <span
        className="pa-1"
      >
        <button
          className="pa-1 rounded font-semibold text-gray-700"
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
      </span>
      <span
        className="pa-1"
      >
        Archive
      </span>
    </div>
    <div />
  </div>
  <div
    className="pa-2 border-t-4"
  >
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  onClick={[Function]}
  type="button"
>
  Give Me More
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    className="border-solid border-2 border-gray-300 pa-2"
    onChange={[Function]}
    type="text"
    value="ok"
  />
  <button
    className="ml-2 pa-1 rounded font-semibold text-gray-700"
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="pa-2 font-semibold"
>
  <div>
    <span
      className="pa-1"
    >
      <button
        className="pa-1 rounded font-semibold text-gray-700"
        onClick={[Function]}
        type="button"
      >
        Title
      </button>
    </span>
    <span
      className="pa-1"
    >
      <button
        className="pa-1 rounded font-semibold text-gray-700"
        onClick={[Function]}
        type="button"
      >
        Author
      </button>
    </span>
    <span
      className="pa-1"
    >
      <button
        className="pa-1 rounded font-semibold text-gray-700"
        onClick={[Function]}
        type="button"
      >
        Comments
      </button>
    </span>
    <span
      className="pa-1"
    >
      <button
        className="pa-1 rounded font-semibold text-gray-700"
        onClick={[Function]}
        type="button"
      >
        Points
      </button>
    </span>
    <span
      className="pa-1"
    >
      Archive
    </span>
  </div>
  <div>
    <div>
      <span
        className="pa-1"
      >
        <a>
          1
        </a>
      </span>
      <span
        className="pa-1"
      >
        1
      </span>
      <span
        className="pa-1"
      >
        1
      </span>
      <span
        className="pa-1"
      >
        2
      </span>
      <span
        className="pa-1"
      >
        <button
          className="pa-1 rounded font-semibold text-gray-700"
          onClick={[Function]}
          type="button"
        >
          Dismiss
        </button>
      </span>
    </div>
    <div>
      <span
        className="pa-1"
      >
        <a>
          2
        </a>
      </span>
      <span
        className="pa-1"
      >
        2
      </span>
      <span
        className="pa-1"
      >
        1
      </span>
      <span
        className="pa-1"
      >
        2
      </span>
      <span
        className="pa-1"
      >
        <button
          className="pa-1 rounded font-semibold text-gray-700"
          onClick={[Function]}
          type="button"
        >
          Dismiss
        </button>
      </span>
    </div>
  </div>
</div>
`;
